--- a/projet/pokedex/index.html
+++ b/projet/pokedex/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Pokédex Simple</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>bonjour</h1>
+  <h1>Pokédex</h1>
+  <div id="pokemonList"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
